# esp32-powerhub

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DEMANDS.md  DESIGNS.md  ble.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
designs/: ble.md
main/: CMakeLists.txt  adc128s102.c  adc128s102.cpp  adc128s102.h  ble_server.c  ble_server.h  command_codec.c  command_codec.h  control_types.h  current_sensor.h  ds18b20_gpio.c  ds18b20_gpio.h  ds18b20_rmt.c  ds18b20_rmt.h  hardware_defs.c  hardware_defs.h  idf_component.yml  led_rgb.c  led_rgb.h  led_status.c  led_status.h  main.c  onewire_gpio.c  onewire_gpio.h  power_mgr.c  power_mgr.h  preset_mgr.c  preset_mgr.h  pwm_control.c  pwm_control.h  scheduler.c  scheduler.h  storage.c  storage.h  system_monitor.c  system_monitor.h  temp_mgr.c  temp_mgr.h
main/ulp/: ulp_power.c
openspec/changes/add-hardcoded-temp-sensor-mapping/: design.md  proposal.md  tasks.md
openspec/changes/ensure-pwm-shutdown-deep-sleep/: proposal.md  tasks.md
openspec/changes/integrate-ds18b20-library/: proposal.md  tasks.md
openspec/changes/refactor-sensor-manager/: design.md  proposal.md  tasks.md
openspec/changes/refactor-temp-sensor-task-based/: design.md  proposal.md  tasks.md
versions/001.init/: DESIGNS.md
versions/002.led/: DEMANDS.md  DESIGNS.md
versions/003.power_management/: DEMANDS.md  DESIGNS.md
versions/004.temperature_sensor/: DEMANDS.md  DESIGNS.md
versions/005.voltage_threshold/: DEMANDS.md  DESIGNS.md
versions/006.hardware_update/: DEMANDS.md  DESIGNS.md
versions/007.current_sensor_abstraction/: DEMANDS.md  DESIGNS.md
(+12 files in other folders)
